These files are translatable resources, handled for now in [gui]/com/limegroup/gnutella/gui/resources/

--- a/lib/messagebundles/resources/notice.html
+++ b/lib/messagebundles/resources/notice.html
@@ -34,7 +34,7 @@ a            { text-decoration: underline; color: blue }
 <h1><a href="#TOC0" name="SEC0">LICENSE NOTICE</a></h1>
 <blockquote>
  <p><strong>LimeWire Client</strong> - Enabling sharing of free information.<br />
-  Copyright (C) 1999-2003 Lime Wire LLC. All rights reserved.</p>
+  Copyright (C) 1999-2004 Lime Wire LLC. All rights reserved.</p>
 </blockquote>
 <h2><a href="#TOC1" name="SEC1">Information Required by This License</a></h2>
 <blockquote>
@@ -58,13 +58,13 @@ a            { text-decoration: underline; color: blue }
  <ul>
   <li>Precompiled &quot;Basic&quot; installable versions of the LimeWire Client are distributed 
    free of charge on <a href="http://www.limewire.com/">http://www.limewire.com/</a>. 
-   The &quot;Basic&quot; version comes with no support. The distribution of the &quot;Basic&quot; precompiled 
-   version or of its sources is possible under the conditions indicated in this 
-   licence.</li>
-  <li>Precompiled &quot;Pro&quot; installable versions of the LimeWire Client can be licensed 
-   for use on that same web site against a small fee, to get additional support 
-   about this software, or to pay for a physical media support and its shipping 
-   costs, or to contribute with this fee to the ongoing development and support 
+   The &quot;Basic&quot; version comes with no support. The distribution of the &quot;Basic&quot; 
+   precompiled version or of its sources is possible under the conditions 
+   indicated in the accompanying licence.</li>
+  <li>Precompiled &quot;Pro&quot; installable versions of the LimeWire Client 
+   can be licensed from that same web site against a small fee, to get additional support 
+   about this software, to pay for a physical media support and its shipping 
+   costs, and to contribute with this fee to the ongoing development and support 
    of this software and of the information web sites.</li>
   <li>Information for resellers of the &quot;Pro&quot; precompiled version is also available 
    on this web site, on the &quot;Buy LimeWire Pro&quot; page, where they can also submit 
@@ -87,7 +87,7 @@ a            { text-decoration: underline; color: blue }
  <p>Additional support is also possible free of charge, but without warranty, by 
   the community of Limewire Client users, in the LimeWire User Forum at
   <a href="http://www.limewire.com/forum.htm">http://www.limewire.com/forum.htm</a>.</p>
- <p>The privacy statement related to the LimeWire.com web sites and to this LimeWire 
+ <p>The privacy statement related to the LimeWire.com web site and to this LimeWire 
   Client software can be read on
   <a href="http://www.limewire.com/english/content/privacy.shtml">http://www.limewire.com/english/content/privacy.shtml</a>.</p>
 </blockquote>
