Symnchronize the lists of people

--- a/lib/messagebundles/resources/notice.html
+++ b/lib/messagebundles/resources/notice.html
@@ -53,7 +53,7 @@ a            { text-decoration: underline; color: blue }
 <h2><a href="#TOC2" name="SEC2">Distribution Information</a></h2>
 <blockquote>
  <p><strong>LimeWire Client</strong> comes with ABSOLUTELY NO WARRANTY; for details 
-  select `About...&#39; in the `Help&#39; menu. This is free software, and you are welcome 
+  select `About...' in the `Help' menu. This is free software, and you are welcome 
   to redistribute it under certain conditions:</p>
  <ul>
   <li>Precompiled &quot;Basic&quot; installable versions of the LimeWire Client are distributed 
