--- a/lib/messagebundles/resources/about_de.html
+++ b/lib/messagebundles/resources/about_de.html
@@ -5,9 +5,8 @@
 <meta http-equiv="Content-Language" content="de" />
 <title>Über LimeWire...</title>
 </head>
-<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" 
-alink="#FF0000">
-<p><font size="3" face="sans-serif">Angestossen durch <font color="#008000">LimeWire</font>&#39;s 
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" alink="#FF0000">
+<p><font face="sans-serif" size="3">Angestossen durch <font color="#008000">LimeWire</font>'s 
  Besitzer, Mark Gorton, ist <font color="#008000">LimeWire</font> ein gemeinschaftliches
  <a href="http://www.limewire.org/">Open-Source-Projekt</a>, das Programmierer und 
  Forscher aus der ganzen Welt miteinbezieht. Die kollaborative Natur von Gnutella 
@@ -16,63 +15,99 @@ alink="#FF0000">
  gemeinsam Tag für Tag daran aus Gnutella eine wahrhaft innovative Sammlung von 
  Protokollen zu machen, die ständig verbessert wird -- ein Beweis der Leistungsfähigkeit 
  offener Protokolle und offener Standards.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> ist natürlich 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> ist natürlich 
  auch das Result von zahllosen Stunden Arbeit der <font color="#008000">LimeWire</font> 
  Entwickler. Diese umfassen:</font></p>
 <ul>
- <li><font size="3" face="sans-serif">Sam Berlin</font></li>
- <li><font size="3" face="sans-serif">Greg Bildson</font></li>
- <li><font size="3" face="sans-serif">Susheel Daswani</font></li>
- <li><font size="3" face="sans-serif">Adam Fisk</font></li>
- <li><font size="3" face="sans-serif">Sumeet Thadani</font></li>
+ <font face="sans-serif" size="3">
+ <li>Zlatin Balevsky</li>
+ <li>Sam Berlin</li>
+ <li>Greg Bildson</li>
+ <li>Susheel Daswani</li>
+ </font>
 </ul>
-<p><font size="3" face="sans-serif">Das <font color="#008000">LimeWire</font>
+<p><font face="sans-serif" size="3">Das <font color="#008000">LimeWire</font>
  <a href="http://www.limewire.com/">Web Portal</a> und ein großer Teil von
- <font color="#008000">LimeWire</font>&#39;s Graphik sind die Leistung von Aubrey Arago.</font></p>
-<p><font size="3" face="sans-serif">Daneben waren die folgenden Entwickler in der 
+ <font color="#008000">LimeWire</font>'s Graphik sind die Leistung von Aubrey Arago.</font></p>
+<p><font face="sans-serif" size="3">Behind the scenes business developments and 
+ day to day affairs are handled by Meghan Formel.</font></p>
+<p><font face="sans-serif" size="3">Zenzele Bell dutifully answers all
+ <font color="#008000">LimeWire Pro</font> support questions.</font></p>
+<p><font face="sans-serif" size="3">Daneben waren die folgenden Entwickler in der 
  Vergangenheit Mitglieder des <font color="#008000">LimeWire</font> Teams, die sich 
  allerdings nun an anderen Projekten beschäftigen:</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Tarun Kapoor</font></li>
- <li><font size="3" face="sans-serif">Christopher Rohrs</font></li>
- <li><font size="3" face="sans-serif">Anurag Singla</font></li>
- <li><font size="3" face="sans-serif">Robert Soule</font></li>
- <li><font size="3" face="sans-serif">Ron Vogl</font></li>
-</ul>
-<p><font size="3" face="sans-serif">Desweiteren war Anthony Carlucci für viele der 
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Adam Fisk</li>
+   <li>Tarun Kapoor</li>
+   <li>Yusuke Naito</li>
+   <li>Christopher Rohrs</li>
+   </font>
+  </ul>
+ </td>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Anurag Singla</li>
+   <li>Robert Soule</li>
+   <li>Sumeet Thadani</li>
+   <li>Ron Vogl</li>
+   </font>
+  </ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3">Desweiteren war Anthony Carlucci für viele der 
  frühen Graphikelemente <font color="#008000">LimeWires</font> verantwortlich.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font>&#39;s Open-Source 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font>'s Open-Source 
  Helfer haben schließlich mit hilfreichem Code und vielen Bug-Fixes, Ideen, Nachforschungen, 
  usw. das Projekt unterstützt. Die im Folgenden aufgelisteten Helfer haben Quelltext 
  beigesteuert, der in jeder Version von <font color="#008000">LimeWire</font> enthalten 
  ist:</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Richie Bielak</font></li>
- <li><font size="3" face="sans-serif">Jerry Charumilind</font></li>
- <li><font size="3" face="sans-serif">Marvin Chase</font></li>
- <li><font size="3" face="sans-serif">Robert Collins</font></li>
- <li><font size="3" face="sans-serif">Kenneth Corbin</font></li>
- <li><font size="3" face="sans-serif">David Graff</font></li>
- <li><font size="3" face="sans-serif">Andy Hedges</font></li>
- <li><font size="3" face="sans-serif">Michael Hirsch</font></li>
- <li><font size="3" face="sans-serif">Roger Kapsi</font></li>
- <li><font size="3" face="sans-serif">Jens-Uwe Mager</font></li>
- <li><font size="3" face="sans-serif">Gordon Mohr</font></li>
- <li><font size="3" face="sans-serif">Chance Moore</font></li>
- <li><font size="3" face="sans-serif">Gregorio Roper</font></li>
- <li><font size="3" face="sans-serif">William Rucklidge</font></li>
- <li><font size="3" face="sans-serif">Eric Seidel</font></li>
- <li><font size="3" face="sans-serif">Philippe Verdy</font></li>
- <li><font size="3" face="sans-serif">Stephan Weber</font></li>
- <li><font size="3" face="sans-serif">Jason Winzenried</font></li>
-</ul>
-<p><font size="3" face="sans-serif">Zusätzlich zu diesen Helfern gehört unser besonderer 
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Richie Bielak</li>
+   <li>Jerry Charumilind</li>
+   <li>Marvin Chase</li>
+   <li>Robert Collins</li>
+   <li>Kenneth Corbin</li>
+   <li>David Graff</li>
+   <li>Andy Hedges</li>
+   <li>Michael Hirsch</li>
+   <li>Roger Kapsi</li>
+   </font>
+  </ul>
+ </td>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Jens-Uwe Mager</li>
+   <li>Gordon Mohr</li>
+   <li>Chance Moore</li>
+   <li>Gregorio Roper</li>
+   <li>William Rucklidge</li>
+   <li>Eric Seidel</li>
+   <li>Philippe Verdy</li>
+   <li>Stephan Weber</li>
+   <li>Jason Winzenried</li>
+   </font>
+  </ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3">Zusätzlich zu diesen Helfern gehört unser besonderer 
  Dank folgenden Kollegen der Gnutella-Gemeinde. Dazu gehören: Vincent Falco von 
  Free Peers, Inc., Gordon Mohr von Bitzi, Inc., John Marshall von Gnucleus, Jason 
  Thomas von Swapper, Brander Lien von ToadNode, Angelo Sotira von www.gnutella.com, 
  Marc Molinaro von www.gnutelliums.com, Simon Bellwood von www.gnutella.co.uk, Serguei 
  Osokine, Justin Chapweske, Mike Green, Mickael Prinkey, Sean Ediger, und Kath Whittle.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> würde 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> würde 
  seinen tiefempfundenen Dank auch gerne den Entwicklern und allen anderen ausprechen, 
  die ihre Ideen dem Projekt beigetragen haben. Schlußendlich möchte,
  <font color="#008000">LimeWire</font> noch seinen Benutzern danken, ohne die das
