--- a/lib/messagebundles/resources/about_es.html
+++ b/lib/messagebundles/resources/about_es.html
@@ -5,9 +5,8 @@
 <meta http-equiv="Content-Language" content="es" />
 <title>Acerca de LimeWire...</title>
 </head>
-<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" 
-alink="#FF0000">
-<p><font size="3" face="sans-serif">Inspirado por el propietario de
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" alink="#FF0000">
+<p><font face="sans-serif" size="3">Inspirado por el propietario de
  <font color="#008000">LimeWire</font>, Mark Gorton, el proyecto
  <font color="#008000">LimeWire</font> es un esfuerzo colaborativo de
  <a href="http://www.limewire.org/">código abierto</a> en el que están comprometidos 
@@ -17,67 +16,113 @@ alink="#FF0000">
  todos los dias para hacer Gnutella una colección de protocolos realmente innovadora 
  que está constantemente mejorando -- un testamento del poder de los protocolos 
  abiertos y de los estándares abiertos.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> es además, 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> es además, 
  por supuesto, el resultado de las incontables horas de trabajo de los desarrolladores 
  de <font color="#008000">LimeWire</font>. Estos incluyen a los siguientes:</font></p>
 <ul>
- <li><font size="3" face="sans-serif">Sam Berlin</font></li>
- <li><font size="3" face="sans-serif">Greg Bildson</font></li>
- <li><font size="3" face="sans-serif">Susheel Daswani</font></li>
- <li><font size="3" face="sans-serif">Adam Fisk</font></li>
- <li><font size="3" face="sans-serif">Sumeet Thadani</font></li>
+ <font face="sans-serif" size="3">
+ <li>Zlatin Balevsky</li>
+ <li>Sam Berlin</li>
+ <li>Greg Bildson</li>
+ <li>Susheel Daswani</li>
+ </font>
 </ul>
-<p><font size="3" face="sans-serif">El <a href="http://www.limewire.com/">sitio 
+<p><font face="sans-serif" size="3">El <a href="http://www.limewire.com/">sitio 
  web</a> de <font color="#008000">LimeWire</font> y muchos de los gráficos de
  <font color="#008000">LimeWire</font> son el trabajo de Aubrey Arago, y Zenzele 
  Bell responde todas las preguntas de soporte de <font color="#008000">LimeWire 
  Pro</font>.</font></p>
-<p><font size="3" face="sans-serif">Además, los siguientes desarrolladores han trabajado 
+<p><font face="sans-serif" size="3">Behind the scenes business developments and 
+ day to day affairs are handled by Meghan Formel.</font></p>
+<p><font face="sans-serif" size="3">Zenzele Bell dutifully answers all
+ <font color="#008000">LimeWire Pro</font> support questions.</font></p>
+<p><font face="sans-serif" size="3">Además, los siguientes desarrolladores han trabajado 
  en el equipo de <font color="#008000">LimeWire</font> en el pasado, pero desde 
  entonces se han cambiado a otros proyectos:</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Tarun Kapoor</font></li>
- <li><font size="3" face="sans-serif">Christopher Rohrs</font></li>
- <li><font size="3" face="sans-serif">Anurag Singla</font></li>
- <li><font size="3" face="sans-serif">Robert Soule</font></li>
- <li><font size="3" face="sans-serif">Ron Vogl</font></li>
-</ul>
-<p><font size="3" face="sans-serif">Finalmente, Anthony Carlucci desarrolló muchos 
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Richie Bielak</li>
+   <li>Jerry Charumilind</li>
+   <li>Marvin Chase</li>
+   <li>Robert Collins</li>
+   <li>Kenneth Corbin</li>
+   <li>David Graff</li>
+   <li>Andy Hedges</li>
+   <li>Michael Hirsch</li>
+   <li>Roger Kapsi</li>
+   </font>
+  </ul>
+ </td>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Jens-Uwe Mager</li>
+   <li>Gordon Mohr</li>
+   <li>Chance Moore</li>
+   <li>Gregorio Roper</li>
+   <li>William Rucklidge</li>
+   <li>Eric Seidel</li>
+   <li>Philippe Verdy</li>
+   <li>Stephan Weber</li>
+   <li>Jason Winzenried</li>
+   </font>
+  </ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3">Finalmente, Anthony Carlucci desarrolló muchos 
  de los gráficos iniciales de <font color="#008000">LimeWire</font>.</font></p>
-<p><font size="3" face="sans-serif">Asimismo, los contribuidores al código abierto 
+<p><font face="sans-serif" size="3">Asimismo, los contribuidores al código abierto 
  de <font color="#008000">LimeWire</font> han aportado código significativo y muchos 
  arreglos de errores, ideas, investigación, etc. al proyecto. Aquellos listados 
  debajo han o bien escrito código que se distribuye con cada versión de
  <font color="#008000">LimeWire</font>, o bien han identificado errores serios en 
  el código, o ambas cosas:</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Richie Bielak</font></li>
- <li><font size="3" face="sans-serif">Jerry Charumilind</font></li>
- <li><font size="3" face="sans-serif">Marvin Chase</font></li>
- <li><font size="3" face="sans-serif">Robert Collins</font></li>
- <li><font size="3" face="sans-serif">Kenneth Corbin</font></li>
- <li><font size="3" face="sans-serif">David Graff</font></li>
- <li><font size="3" face="sans-serif">Andy Hedges</font></li>
- <li><font size="3" face="sans-serif">Michael Hirsch</font></li>
- <li><font size="3" face="sans-serif">Roger Kapsi</font></li>
- <li><font size="3" face="sans-serif">Jens-Uwe Mager</font></li>
- <li><font size="3" face="sans-serif">Gordon Mohr</font></li>
- <li><font size="3" face="sans-serif">Chance Moore</font></li>
- <li><font size="3" face="sans-serif">Gregorio Roper</font></li>
- <li><font size="3" face="sans-serif">William Rucklidge</font></li>
- <li><font size="3" face="sans-serif">Eric Seidel</font></li>
- <li><font size="3" face="sans-serif">Philippe Verdy</font></li>
- <li><font size="3" face="sans-serif">Stephan Weber</font></li>
- <li><font size="3" face="sans-serif">Jason Winzenried</font></li>
-</ul>
-<p><font size="3" face="sans-serif">Además de esos contribuidores, diversos colegas 
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Richie Bielak</li>
+   <li>Jerry Charumilind</li>
+   <li>Marvin Chase</li>
+   <li>Robert Collins</li>
+   <li>Kenneth Corbin</li>
+   <li>David Graff</li>
+   <li>Andy Hedges</li>
+   <li>Michael Hirsch</li>
+   <li>Roger Kapsi</li>
+   </font>
+  </ul>
+ </td>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Jens-Uwe Mager</li>
+   <li>Gordon Mohr</li>
+   <li>Chance Moore</li>
+   <li>Gregorio Roper</li>
+   <li>William Rucklidge</li>
+   <li>Eric Seidel</li>
+   <li>Philippe Verdy</li>
+   <li>Stephan Weber</li>
+   <li>Jason Winzenried</li>
+   </font>
+  </ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3">Además de esos contribuidores, diversos colegas 
  de la comunidad Gnutella merecen un agradecimiento especial. Ello incluye a: Vincent 
  Falco de Free Peers, Inc., Gordon Mohr de Bitzi, Inc., John Marshall de Gnucleus, 
  Jason Thomas de Swapper, Brander Lien de ToadNode, Angelo Sotira de www.gnutella.com, 
  Marc Molinaro de www.gnutelliums.com, Simon Bellwood de www.gnutella.co.uk, Serguei 
  Osokine, Justin Chapweske, Mike Green, Raphael Manfredi, Tor Klingberg, Mickael 
  Prinkey, Sean Ediger, y Kath Whittle.</font></p>
-<p><font size="3" face="sans-serif">A <font color="#008000">LimeWire</font> le gustaría 
+<p><font face="sans-serif" size="3">A <font color="#008000">LimeWire</font> le gustaría 
  extender su sincero agradecimiento a estos desarrolladores y todos los otros que 
  han contribuido con sus ideas al proyecto. Finalmente, <font color="#008000">LimeWire</font> 
  desearía dar las gracias a los usuarios de <font color="#008000">LimeWire</font>, 
