--- a/lib/messagebundles/resources/about_fi.html
+++ b/lib/messagebundles/resources/about_fi.html
@@ -5,9 +5,8 @@
 <meta http-equiv="Content-Language" content="fi" />
 <title>Tietoja Limewirest...</title>
 </head>
-<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" 
-alink="#FF0000">
-<p><font size="3" face="sans-serif">Inspiroijana <font color="#008000">LimeWire</font>n 
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" alink="#FF0000">
+<p><font face="sans-serif" size="3">Inspiroijana <font color="#008000">LimeWire</font>n 
  omistaja, Mark Gorton, <font color="#008000">LimeWire</font> projekti on yhteinen
  <a href="http://www.limewire.org/">vapaan koodin hanke</a> jossa on mukana ohjelmoijia 
  ja tutkijoita ympäri maailman. Gnutellan yhteistyö luonne heijastuu myös Gnutella 
@@ -15,68 +14,102 @@ alink="#FF0000">
  jäsenenä. GDF:n jäsenet työskentelevät yhteistyössä joka päivä, tehdäkseen Gnutellasta 
  todellisen koko ajan parantuvan kokoelman protokollia -- todellisen avoimien protokollien 
  ja avoimen ohjelmistojen testamentin.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> on myöskin, 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> on myöskin, 
  totta kai, lukemattomien ohjelmointi työtuntien saavutus, näitä
  <font color="#008000">LimeWire</font> ohjelmoijia ovat seuraavat:</font></p>
 <ul>
- <li><font size="3" face="sans-serif">Sam Berlin</font></li>
- <li><font size="3" face="sans-serif">Greg Bildson</font></li>
- <li><font size="3" face="sans-serif">Susheel Daswani</font></li>
- <li><font size="3" face="sans-serif">Adam Fisk</font></li>
- <li><font size="3" face="sans-serif">Sumeet Thadani</font></li>
+ <font face="sans-serif" size="3">
+ <li>Zlatin Balevsky</li>
+ <li>Sam Berlin</li>
+ <li>Greg Bildson</li>
+ <li>Susheel Daswani</li>
+ </font>
 </ul>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font>
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font>
  <a href="http://www.limewire.com/">web-sivusto</a> ja <font color="#008000">LimeWire</font>n 
  grafiikka ovat Senior Designer Aubrey Aragon käden jälkeä. Aubrey myöskin suunnitteli
  <font color="#008000">LimeWiren</font> teemat.</font></p>
-<p><font size="3" face="sans-serif">Zenzele Bell vastaa ahkerasti kaikkiin
+<p><font face="sans-serif" size="3">Behind the scenes business developments and 
+ day to day affairs are handled by Meghan Formel.</font></p>
+<p><font face="sans-serif" size="3">Zenzele Bell vastaa ahkerasti kaikkiin
  <font color="#008000">LimeWire Pro</font> tukipyyntöihin.</font></p>
-<p><font size="3" face="sans-serif">Lisäksi seuraavat suunnittelijat ovat työskennelleet
+<p><font face="sans-serif" size="3">Lisäksi seuraavat suunnittelijat ovat työskennelleet
  <font color="#008000">LimeWire</font> teamissä aikaisemmin, mutta ovat siirtyneet 
  toisiin projekteihin:</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Tarun Kapoor</font></li>
- <li><font size="3" face="sans-serif">Christopher Rohrs</font></li>
- <li><font size="3" face="sans-serif">Anurag Singla</font></li>
- <li><font size="3" face="sans-serif">Robert Soule</font></li>
- <li><font size="3" face="sans-serif">Ron Vogl</font></li>
-</ul>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font>n vapaan 
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Adam Fisk</li>
+   <li>Tarun Kapoor</li>
+   <li>Yusuke Naito</li>
+   <li>Christopher Rohrs</li>
+   </font>
+  </ul>
+ </td>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Anurag Singla</li>
+   <li>Robert Soule</li>
+   <li>Sumeet Thadani</li>
+   <li>Ron Vogl</li>
+   </font>
+  </ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font>n vapaan 
  koodin osallistujat ovat kirjoittaneet huomattavan osan koodia ja monia bugi-korjauksia, 
  ideoita, tutkimusta jne. Allalistatut henkilöt ovat kirjoittaneet koodia joka on 
  jokaisessa Limewire versiossa tai ovat korjanneet vakavia virheitä tai sekä että:</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Richie Bielak</font></li>
- <li><font size="3" face="sans-serif">Jerry Charumilind</font></li>
- <li><font size="3" face="sans-serif">Marvin Chase</font></li>
- <li><font size="3" face="sans-serif">Robert Collins</font></li>
- <li><font size="3" face="sans-serif">Kenneth Corbin</font></li>
- <li><font size="3" face="sans-serif">David Graff</font></li>
- <li><font size="3" face="sans-serif">Andy Hedges</font></li>
- <li><font size="3" face="sans-serif">Michael Hirsch</font></li>
- <li><font size="3" face="sans-serif">Roger Kapsi</font></li>
- <li><font size="3" face="sans-serif">Jens-Uwe Mager</font></li>
- <li><font size="3" face="sans-serif">Gordon Mohr</font></li>
- <li><font size="3" face="sans-serif">Chance Moore</font></li>
- <li><font size="3" face="sans-serif">Gregorio Roper</font></li>
- <li><font size="3" face="sans-serif">William Rucklidge</font></li>
- <li><font size="3" face="sans-serif">Eric Seidel</font></li>
- <li><font size="3" face="sans-serif">Philippe Verdy</font></li>
- <li><font size="3" face="sans-serif">Stephan Weber</font></li>
- <li><font size="3" face="sans-serif">Jason Winzenried</font></li>
-</ul>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> haluaa 
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Richie Bielak</li>
+   <li>Jerry Charumilind</li>
+   <li>Marvin Chase</li>
+   <li>Robert Collins</li>
+   <li>Kenneth Corbin</li>
+   <li>David Graff</li>
+   <li>Andy Hedges</li>
+   <li>Michael Hirsch</li>
+   <li>Roger Kapsi</li>
+   </font>
+  </ul>
+ </td>
+ <td align="left" valign="top">
+  <ul>
+   <font face="sans-serif" size="3">
+   <li>Jens-Uwe Mager</li>
+   <li>Gordon Mohr</li>
+   <li>Chance Moore</li>
+   <li>Gregorio Roper</li>
+   <li>William Rucklidge</li>
+   <li>Eric Seidel</li>
+   <li>Philippe Verdy</li>
+   <li>Stephan Weber</li>
+   <li>Jason Winzenried</li>
+   </font>
+  </ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> haluaa 
  myöskin kiittää niitä useita henkilöitä jotka ovat osallistuneet projektin käännöstyöhön 
  niin ohjelman itsensä kuin <font color="#008000">LimeWiren</font> web-sivuston 
  osalta. </font></p>
-<p><font size="3" face="sans-serif">Näiden osallistujien lisäksi seuraavat kollegat 
+<p><font face="sans-serif" size="3">Näiden osallistujien lisäksi seuraavat kollegat 
  Gnutella yhteisössä ovat ansainneet erikoiskiitoksen. Heitä ovat seuraavat: Vincent 
  Falco of Free Peers, Inc., Gordon Mohr of Bitzi, Inc., John Marshall of Gnucleus, 
  Jason Thomas of Swapper, Brander Lien of ToadNode, Angelo Sotira of www.gnutella.com, 
  Marc Molinaro of www.gnutelliums.com, Simon Bellwood of www.gnutella.co.uk, Serguei 
  Osokine, Justin Chapweske, Mike Green, Raphael Manfredi, Tor Klingberg, Mickael 
  Prinkey, Sean Ediger, and Kath Whittle.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> haluaisi 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> haluaisi 
  laajentaa kiitoksensa kaikille niille ohjelmoijille ja muillekin jotka ovat antaneet 
  ideoitaan projektille. Lopuksi, <font color="#008000">LimeWire</font> haluaa kiittää 
  niitä useita <font color="#008000">LimeWire</font> käyttäjiä, joita ilman
