--- a/lib/messagebundles/resources/about_fr.html
+++ b/lib/messagebundles/resources/about_fr.html
@@ -5,9 +5,8 @@
 <meta http-equiv="Content-Language" content="fr" />
 <title>A propos de LimeWire...</title>
 </head>
-<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" 
-alink="#FF0000">
-<p><font size="3" face="sans-serif">Inspiré par le propriétaire de
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" alink="#FF0000">
+<p><font face="sans-serif" size="3">Inspiré par le propriétaire de
  <font color="#008000">LimeWire</font>, Mark Gorton, le projet
  <font color="#008000">LimeWire</font> est issu de la collaboration de programmeurs 
  et de chercheurs du monde entier dans un <a href="http://www.limewire.org/">effort 
@@ -17,74 +16,100 @@ alink="#FF0000">
  tranchées pour faire de Gnutella une collection vraiment innovatrice de protocoles 
  en constante amélioration -- une des conséquences naturelles de la puissance des 
  protocoles ouverts et des standards non propriétaires.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> est aussi, 
- bien sûr, le résultat d&#39;innombrables heures de travail de la part des développeurs 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> est aussi, 
+ bien sûr, le résultat d'innombrables heures de travail de la part des développeurs 
  de <font color="#008000">LimeWire</font>. Ceux-ci incluent :</font></p>
 <ul>
- <li><font size="3" face="sans-serif">Sam Berlin</font></li>
- <li><font size="3" face="sans-serif">Greg Bildson</font></li>
- <li><font size="3" face="sans-serif">Susheel Daswani</font></li>
- <li><font size="3" face="sans-serif">Adam Fisk</font></li>
- <li><font size="3" face="sans-serif">Sumeet Thadani</font></li>
+ <font face="sans-serif" size="3">
+ <li>Zlatin Balevsky</li>
+ <li>Sam Berlin</li>
+ <li>Greg Bildson</li>
+ <li>Susheel Daswani</li>
+ </font>
 </ul>
-<p><font size="3" face="sans-serif">Le <a href="http://www.limewire.com/">site web</a>
+<p><font face="sans-serif" size="3">Le <a href="http://www.limewire.com/">site web</a>
  <font color="#008000">LimeWire</font> et nombre des graphiques de
- <font color="#008000">LimeWire</font> sont le fruit du travail d&#39;Aubrey Arago, 
- et Zenzele Bell réponds à toutes les questions de support sur
- <font color="#008000">LimeWire Pro</font>.</font></p>
-<p><font size="3" face="sans-serif">De plus, les développeurs suivants ont travaillé 
- par le passé dans l&#39;équipe <font color="#008000">LimeWire</font>, mais se sont 
- consacrés depuis à d&#39;autres projets :</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Tarun Kapoor</font></li>
- <li><font size="3" face="sans-serif">Christopher Rohrs</font></li>
- <li><font size="3" face="sans-serif">Anurag Singla</font></li>
- <li><font size="3" face="sans-serif">Robert Soule</font></li>
- <li><font size="3" face="sans-serif">Ron Vogl</font></li>
-</ul>
-<p><font size="3" face="sans-serif">Finalement, Anthony Carlucci a développé nombre 
+ <font color="#008000">LimeWire</font> sont le fruit du travail d'Aubrey Arago.</font></p>
+<p><font face="sans-serif" size="3">Les développements de fond de l'activité économique 
+ et la conduite des affaires courantes sont pris en charge par Meghan Formel.</font></p>
+<p><font face="sans-serif" size="3">Zenzele Bell réponds comme il se doit à toutes 
+ les questions de support sur <font color="#008000">LimeWire Pro</font>.</font></p>
+<p><font face="sans-serif" size="3">De plus, les développeurs suivants ont travaillé 
+ par le passé dans l'équipe <font color="#008000">LimeWire</font>, mais se sont 
+ consacrés depuis à d'autres projets :</font></p>
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+   <ul><font face="sans-serif" size="3">
+   <li>Adam Fisk</li>
+   <li>Tarun Kapoor</li>
+   <li>Yusuke Naito</li>
+   <li>Christopher Rohrs</li>
+  </font></ul>
+ </td>
+ <td align="left" valign="top">
+   <ul><font face="sans-serif" size="3">
+   <li>Anurag Singla</li>
+   <li>Robert Soule</li>
+   <li>Sumeet Thadani</li>
+   <li>Ron Vogl</li>
+  </font></ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3">Finalement, Anthony Carlucci a développé nombre 
  des premiers graphiques pour <font color="#008000">LimeWire</font>.</font></p>
-<p><font size="3" face="sans-serif">Les contributeurs du projet ouvert
+<p><font face="sans-serif" size="3">Les contributeurs du projet ouvert
  <font color="#008000">LimeWire</font> ont produit une part significative du code, 
  ils ont de même isolé de nombreux bogues, partagé leurs idées, recherches, découvertes, 
  etc. pour le projet. Ceux listés ci-dessous ont écrit du code qui est distribué 
  dans chaque version de <font color="#008000">LimeWire</font>, ou identifié des 
  bogues sérieux présents dans le code, parfois même les deux :</font></p>
-<ul>
- <li><font size="3" face="sans-serif">Richie Bielak</font></li>
- <li><font size="3" face="sans-serif">Jerry Charumilind</font></li>
- <li><font size="3" face="sans-serif">Marvin Chase</font></li>
- <li><font size="3" face="sans-serif">Robert Collins</font></li>
- <li><font size="3" face="sans-serif">Kenneth Corbin</font></li>
- <li><font size="3" face="sans-serif">David Graff</font></li>
- <li><font size="3" face="sans-serif">Andy Hedges</font></li>
- <li><font size="3" face="sans-serif">Michael Hirsch</font></li>
- <li><font size="3" face="sans-serif">Roger Kapsi</font></li>
- <li><font size="3" face="sans-serif">Jens-Uwe Mager</font></li>
- <li><font size="3" face="sans-serif">Gordon Mohr</font></li>
- <li><font size="3" face="sans-serif">Chance Moore</font></li>
- <li><font size="3" face="sans-serif">Gregorio Roper</font></li>
- <li><font size="3" face="sans-serif">William Rucklidge</font></li>
- <li><font size="3" face="sans-serif">Eric Seidel</font></li>
- <li><font size="3" face="sans-serif">Philippe Verdy</font></li>
- <li><font size="3" face="sans-serif">Stephan Weber</font></li>
- <li><font size="3" face="sans-serif">Jason Winzenried</font></li>
-</ul>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> tient 
- également à remercier les nombreux contributeurs qui ont permis l&#39;internationalisation 
+<table border="0" cellspacing="0" cellpadding="0"><tbody>
+<tr>
+ <td align="left" valign="top">
+   <ul><font face="sans-serif" size="3">
+   <li>Richie Bielak</li>
+   <li>Jerry Charumilind</li>
+   <li>Marvin Chase</li>
+   <li>Robert Collins</li>
+   <li>Kenneth Corbin</li>
+   <li>David Graff</li>
+   <li>Andy Hedges</li>
+   <li>Michael Hirsch</li>
+   <li>Roger Kapsi</li>
+  </font></ul>
+ </td>
+ <td align="left" valign="top">
+   <ul><font face="sans-serif" size="3">
+   <li>Jens-Uwe Mager</li>
+   <li>Gordon Mohr</li>
+   <li>Chance Moore</li>
+   <li>Gregorio Roper</li>
+   <li>William Rucklidge</li>
+   <li>Eric Seidel</li>
+   <li>Philippe Verdy</li>
+   <li>Stephan Weber</li>
+   <li>Jason Winzenried</li>
+  </font></ul>
+ </td>
+</tr>
+</tbody></table>
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> tient 
+ également à remercier les nombreux contributeurs qui ont permis l'internationalisation 
  et la traduction du logiciel ou de son site web, ainsi que les bêta-testeurs volontaires 
- qui lui ont adressé leurs commentaires afin d&#39;améliorer la qualité de ce logiciel.</font></p>
-<p><font size="3" face="sans-serif">En plus de ces contributeurs directs, plusieurs 
+ qui lui ont adressé leurs commentaires afin d'améliorer la qualité de ce logiciel.</font></p>
+<p><font face="sans-serif" size="3">En plus de ces contributeurs directs, plusieurs 
  collègues de la communauté Gnutella méritent des remerciements particuliers. Il 
- s&#39;agit notamment de : Vincent Falco de Free Peers, Inc., Gordon Mohr de Bitzi, 
+ s'agit notamment de : Vincent Falco de Free Peers, Inc., Gordon Mohr de Bitzi, 
  Inc., John Marshall de Gnucleus, Jason Thomas de Swapper, Brander Lien de ToadNode, 
  Angelo Sotira de www.gnutella.com, Marc Molinaro de www.gnutelliums.com, Simon 
  Bellwood de www.gnutella.co.uk, Serguei Osokine, Justin Chapweske, Mike Green, 
  Raphael Manfredi, Tor Klingberg, Mickael Prinkey, Sean Ediger, et Kath Whittle.</font></p>
-<p><font size="3" face="sans-serif"><font color="#008000">LimeWire</font> souhaite 
+<p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font> souhaite 
  étendre ses sincères remerciements à ces développeurs et à tous les autres qui 
  ont contribué par leurs idées au projet. Enfin, <font color="#008000">LimeWire</font> 
  voudrait particulièrement remercier les utilisateurs <font color="#008000">LimeWire</font>, 
- sans qui le réseau <font color="#008000">LimeWire</font> n&#39;existerait pas.</font></p>
+ sans qui le réseau <font color="#008000">LimeWire</font> n'existerait pas.</font></p>
 </body>
 </html>
