--- a/lib/messagebundles/resources/gpl.html
+++ b/lib/messagebundles/resources/gpl.html
@@ -51,7 +51,7 @@ a            { text-decoration: underline; color: blue }
   and change it. By contrast, the GNU General Public License is intended to guarantee 
   your freedom to share and change free software -- to make sure the software is 
   free for all its users. This General Public License applies to most of the Free 
-  Software Foundation&#39;s software and to any other program whose authors commit to 
+  Software Foundation's software and to any other program whose authors commit to 
   using it. (Some other Free Software Foundation software is covered by the GNU 
   Library General Public License instead.) You can apply it to your programs, too.</p>
  <p>When we speak of free software, we are referring to freedom, not price. Our 
@@ -71,15 +71,15 @@ a            { text-decoration: underline; color: blue }
  <p>We protect your rights with two steps: (1) copyright the software, and (2) offer 
   you this license which gives you legal permission to copy, distribute and/or modify 
   the software.</p>
- <p>Also, for each author&#39;s protection and ours, we want to make certain that everyone 
+ <p>Also, for each author's protection and ours, we want to make certain that everyone 
   understands that there is no warranty for this free software. If the software 
   is modified by someone else and passed on, we want its recipients to know that 
   what they have is not the original, so that any problems introduced by others 
-  will not reflect on the original authors&#39; reputations.</p>
+  will not reflect on the original authors' reputations.</p>
  <p>Finally, any free program is threatened constantly by software patents. We wish 
   to avoid the danger that redistributors of a free program will individually obtain 
   patent licenses, in effect making the program proprietary. To prevent this, we 
-  have made it clear that any patent must be licensed for everyone&#39;s free use or 
+  have made it clear that any patent must be licensed for everyone's free use or 
   not licensed at all.</p>
  <p>The precise terms and conditions for copying, distribution and modification 
   follow.</p>
@@ -100,7 +100,7 @@ a            { text-decoration: underline; color: blue }
   not restricted, and the output from the Program is covered only if its contents 
   constitute a work based on the Program (independent of having been made by running 
   the Program). Whether that is true depends on what the Program does.</p>
- <p><strong>1.</strong> You may copy and distribute verbatim copies of the Program&#39;s 
+ <p><strong>1.</strong> You may copy and distribute verbatim copies of the Program's 
   source code as you receive it, in any medium, provided that you conspicuously 
   and appropriately publish on each copy an appropriate copyright notice and disclaimer 
   of warranty; keep intact all the notices that refer to this License and to the 
@@ -187,7 +187,7 @@ a            { text-decoration: underline; color: blue }
  <p><strong>6.</strong> Each time you redistribute the Program (or any work based 
   on the Program), the recipient automatically receives a license from the original 
   licensor to copy, distribute or modify the Program subject to these terms and 
-  conditions. You may not impose any further restrictions on the recipients&#39; exercise 
+  conditions. You may not impose any further restrictions on the recipients' exercise 
   of the rights granted herein. You are not responsible for enforcing compliance 
   by third parties to this License.</p>
  <p><strong>7.</strong> If, as a consequence of a court judgment or allegation of 
@@ -266,7 +266,7 @@ a            { text-decoration: underline; color: blue }
   of warranty; and each file should have at least the &quot;copyright&quot; line and a pointer 
   to where the full notice is found.</p>
  <blockquote>
-  <p><var>one line to give the program&#39;s name and an idea of what it does.</var><br />
+  <p><var>one line to give the program's name and an idea of what it does.</var><br />
    Copyright (C) <var>yyyy</var> <var>name of author</var></p>
   <p>This program is free software; you can redistribute it and/or modify it under 
    the terms of the GNU General Public License as published by the Free Software 
@@ -285,20 +285,20 @@ a            { text-decoration: underline; color: blue }
   <p><var>Gnomovision</var> version <var>69</var>, Copyright (C) <var>year</var>
    <var>name of author</var></p>
   <p><var>Gnomovision</var> comes with ABSOLUTELY NO WARRANTY; for details type 
-   `<samp>show w</samp>&#39;. This is free software, and you are welcome to redistribute 
-   it under certain conditions; type `<samp>show c</samp>&#39; for details.</p>
+   `<samp>show w</samp>'. This is free software, and you are welcome to redistribute 
+   it under certain conditions; type `<samp>show c</samp>' for details.</p>
  </blockquote>
- <p>The hypothetical commands `<samp>show w</samp>&#39; and `<samp>show c</samp>&#39; should 
+ <p>The hypothetical commands `<samp>show w</samp>' and `<samp>show c</samp>' should 
   show the appropriate parts of the General Public License. Of course, the commands 
-  you use may be called something other than `<samp>show w</samp>&#39; and `<samp>show 
-  c</samp>&#39;; they could even be mouse-clicks or menu items -- whatever suits your 
+  you use may be called something other than `<samp>show w</samp>' and `<samp>show 
+  c</samp>'; they could even be mouse-clicks or menu items -- whatever suits your 
   program.</p>
  <p>You should also get your employer (if you work as a programmer) or your school, 
   if any, to sign a &quot;copyright disclaimer&quot; for the program, if necessary. Here is 
   a sample; alter the names:</p>
  <blockquote>
   <p><var>Yoyodyne, Inc.</var>, hereby disclaims all copyright interest in the program 
-   `<var>Gnomovision</var>&#39; (which makes passes at compilers) written by <var>James 
+   `<var>Gnomovision</var>' (which makes passes at compilers) written by <var>James 
    Hacker</var>.</p>
   <p><var>signature of Ty Coon</var>, <var>1 April 1989</var></p>
   <p><var>Ty Coon</var>, President of <var>Vice</var></p>
