Add Justin Schmidt to the current team, move Susheel Daswani to the historic team

--- a/lib/messagebundles/resources/about.html
+++ b/lib/messagebundles/resources/about.html
@@ -23,7 +23,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
- <li>Susheel Daswani</li>
+ <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3">The <font color="#008000">LimeWire</font>
@@ -42,6 +42,7 @@
  <td align="left" valign="top">
   <ul>
    <font face="sans-serif" size="3">
+   <li>Susheel Daswani</li>
    <li>Adam Fisk</li>
    <li>Tarun Kapoor</li>
    <li>Yusuke Naito</li>
