--- a/lib/messagebundles/resources/about_es.html
+++ b/lib/messagebundles/resources/about_es.html
@@ -24,7 +24,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
- <li>Susheel Daswani</li>
+ <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3">El <a href="http://www.limewire.com/">sitio 
@@ -44,30 +44,21 @@
  <td align="left" valign="top">
   <ul>
    <font face="sans-serif" size="3">
-   <li>Richie Bielak</li>
-   <li>Jerry Charumilind</li>
-   <li>Marvin Chase</li>
-   <li>Robert Collins</li>
-   <li>Kenneth Corbin</li>
-   <li>David Graff</li>
-   <li>Andy Hedges</li>
-   <li>Michael Hirsch</li>
-   <li>Roger Kapsi</li>
+   <li>Susheel Daswani</li>
+   <li>Adam Fisk</li>
+   <li>Tarun Kapoor</li>
+   <li>Yusuke Naito</li>
+   <li>Christopher Rohrs</li>
    </font>
   </ul>
  </td>
  <td align="left" valign="top">
   <ul>
    <font face="sans-serif" size="3">
-   <li>Jens-Uwe Mager</li>
-   <li>Gordon Mohr</li>
-   <li>Chance Moore</li>
-   <li>Gregorio Roper</li>
-   <li>William Rucklidge</li>
-   <li>Eric Seidel</li>
-   <li>Philippe Verdy</li>
-   <li>Stephan Weber</li>
-   <li>Jason Winzenried</li>
+   <li>Anurag Singla</li>
+   <li>Robert Soule</li>
+   <li>Sumeet Thadani</li>
+   <li>Ron Vogl</li>
    </font>
   </ul>
  </td>
