--- a/lib/messagebundles/resources/about_fi.html
+++ b/lib/messagebundles/resources/about_fi.html
@@ -22,7 +22,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
- <li>Susheel Daswani</li>
+ <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3"><font color="#008000">LimeWire</font>
@@ -41,6 +41,7 @@
  <td align="left" valign="top">
   <ul>
    <font face="sans-serif" size="3">
+   <li>Susheel Daswani</li>
    <li>Adam Fisk</li>
    <li>Tarun Kapoor</li>
    <li>Yusuke Naito</li>
