--- a/lib/messagebundles/resources/about_fr.html
+++ b/lib/messagebundles/resources/about_fr.html
@@ -24,7 +24,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
- <li>Susheel Daswani</li>
+ <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3">Le <a href="http://www.limewire.com/">site web</a>
@@ -41,6 +41,7 @@
 <tr>
  <td align="left" valign="top">
    <ul><font face="sans-serif" size="3">
+   <li>Susheel Daswani</li>
    <li>Adam Fisk</li>
    <li>Tarun Kapoor</li>
    <li>Yusuke Naito</li>
