--- a/lib/messagebundles/resources/about_pl.html
+++ b/lib/messagebundles/resources/about_pl.html
@@ -23,7 +23,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
- <li>Susheel Daswani</li>
+ <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3"><a href="http://www.limewire.com/">Stronê domow±</a> 
@@ -41,6 +41,7 @@
  <td align="left" valign="top">
   <ul>
    <font face="sans-serif" size="3">
+   <li>Susheel Daswani</li>
    <li>Adam Fisk</li>
    <li>Tarun Kapoor</li>
    <li>Yusuke Naito</li>
