--- a/lib/messagebundles/resources/about_fr.html
+++ b/lib/messagebundles/resources/about_fr.html
@@ -69,7 +69,8 @@
 <table border="0" cellspacing="0" cellpadding="0"><tbody>
 <tr>
  <td align="left" valign="top">
-   <ul><font face="sans-serif" size="3">
+  <ul>
+   <font face="sans-serif" size="3">
    <li>Richie Bielak</li>
    <li>Jerry Charumilind</li>
    <li>Marvin Chase</li>
@@ -79,20 +80,25 @@
    <li>Andy Hedges</li>
    <li>Michael Hirsch</li>
    <li>Roger Kapsi</li>
-  </font></ul>
+   <li>Jens-Uwe Mager</li>
+   </font>
+  </ul>
  </td>
  <td align="left" valign="top">
-   <ul><font face="sans-serif" size="3">
-   <li>Jens-Uwe Mager</li>
+  <ul>
+   <font face="sans-serif" size="3">
    <li>Gordon Mohr</li>
    <li>Chance Moore</li>
+   <li>Rick T. Piazza</li>
+   <li>Eugene Romanenko</li>
    <li>Gregorio Roper</li>
    <li>William Rucklidge</li>
    <li>Eric Seidel</li>
    <li>Philippe Verdy</li>
    <li>Stephan Weber</li>
    <li>Jason Winzenried</li>
-  </font></ul>
+   </font>
+  </ul>
  </td>
 </tr>
 </tbody></table>
