--- a/lib/messagebundles/resources/about_sl.html
+++ b/lib/messagebundles/resources/about_sl.html
@@ -79,15 +79,17 @@
    <li>Andy Hedges</li>
    <li>Michael Hirsch</li>
    <li>Roger Kapsi</li>
+   <li>Jens-Uwe Mager</li>
    </font>
   </ul>
  </td>
  <td align="left" valign="top">
   <ul>
    <font face="sans-serif" size="3">
-   <li>Jens-Uwe Mager</li>
    <li>Gordon Mohr</li>
    <li>Chance Moore</li>
+   <li>Rick T. Piazza</li>
+   <li>Eugene Romanenko</li>
    <li>Gregorio Roper</li>
    <li>William Rucklidge</li>
    <li>Eric Seidel</li>
