Make sure all resources contain new references to: - Aubrey Arago's work on Limewire themes - Add Dave Niponski in the Limewire developers team - Add Katie Catillaz in the LimeWire business team

--- a/lib/messagebundles/resources/about.html
+++ b/lib/messagebundles/resources/about.html
@@ -23,6 +23,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
@@ -31,7 +32,7 @@
  graphics are the hard work of Senior Designer Aubrey Arago. Aubrey also designed 
  the <font color="#008000">LimeWire</font> themes.</font></p>
 <p><font face="sans-serif" size="3">Behind the scenes business developments and 
- day to day affairs are handled by Meghan Formel.</font></p>
+ day to day affairs are handled by Meghan Formel and Katie Catillaz.</font></p>
 <p><font face="sans-serif" size="3">Zenzele Bell dutifully answers all
  <font color="#008000">LimeWire Pro</font> support questions.</font></p>
 <p><font face="sans-serif" size="3">In addition, the following developers have worked 
