--- a/lib/messagebundles/resources/about_de.html
+++ b/lib/messagebundles/resources/about_de.html
@@ -23,14 +23,16 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3">Das <font color="#008000">LimeWire</font>
  <a href="http://www.limewire.com/">Web Portal</a> und ein groﬂer Teil von
- <font color="#008000">LimeWire</font>'s Graphik sind die Leistung von Aubrey Arago.</font></p>
+ <font color="#008000">LimeWire</font>'s Graphik sind die Leistung von Aubrey Arago.
+ Aubrey also designed the <font color="#008000">LimeWire</font> themes.</font></p>
 <p><font face="sans-serif" size="3">Behind the scenes business developments and 
- day to day affairs are handled by Meghan Formel.</font></p>
+ day to day affairs are handled by Meghan Formel und Katie Catillaz.</font></p>
 <p><font face="sans-serif" size="3">Zenzele Bell dutifully answers all
  <font color="#008000">LimeWire Pro</font> support questions.</font></p>
 <p><font face="sans-serif" size="3">Daneben waren die folgenden Entwickler in der 
