--- a/lib/messagebundles/resources/about_es.html
+++ b/lib/messagebundles/resources/about_es.html
@@ -24,16 +24,16 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3">El <a href="http://www.limewire.com/">sitio 
  web</a> de <font color="#008000">LimeWire</font> y muchos de los gráficos de
- <font color="#008000">LimeWire</font> son el trabajo de Aubrey Arago, y Zenzele 
- Bell responde todas las preguntas de soporte de <font color="#008000">LimeWire 
- Pro</font>.</font></p>
+ <font color="#008000">LimeWire</font> son el trabajo de Senior Designer Aubrey Arago.
+ Aubrey also designed the <font color="#008000">LimeWire</font> themes.</font></p>
 <p><font face="sans-serif" size="3">Behind the scenes business developments and 
- day to day affairs are handled by Meghan Formel.</font></p>
+ day to day affairs are handled by Meghan Formel and Katie Catillaz.</font></p>
 <p><font face="sans-serif" size="3">Zenzele Bell dutifully answers all
  <font color="#008000">LimeWire Pro</font> support questions.</font></p>
 <p><font face="sans-serif" size="3">Además, los siguientes desarrolladores han trabajado 
