--- a/lib/messagebundles/resources/about_fi.html
+++ b/lib/messagebundles/resources/about_fi.html
@@ -22,6 +22,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
