--- a/lib/messagebundles/resources/about_fr.html
+++ b/lib/messagebundles/resources/about_fr.html
@@ -24,16 +24,19 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3">Le <a href="http://www.limewire.com/">site web</a>
  <font color="#008000">LimeWire</font> et nombre des graphiques de
- <font color="#008000">LimeWire</font> sont le fruit du travail d'Aubrey Arago.</font></p>
-<p><font face="sans-serif" size="3">Les développements de fond de l'activité économique 
- et la conduite des affaires courantes sont pris en charge par Meghan Formel.</font></p>
+ <font color="#008000">LimeWire</font> sont le fruit du travail du Designer Senior Aubrey
+ Arago. Aubrey a également conçu les thèmes de <font color="#008000">LimeWire</font></font></p>
+<p><font face="sans-serif" size="3">Le développement de fond des activités économiques
+ et la conduite des affaires courantes sont pris en charge par Meghan Formel et
+ Katie Catillaz.</font></p>
 <p><font face="sans-serif" size="3">Zenzele Bell réponds comme il se doit à toutes 
- les questions de support sur <font color="#008000">LimeWire Pro</font>.</font></p>
+ les questions de support sur <font color="#008000">LimeWire PRO</font>.</font></p>
 <p><font face="sans-serif" size="3">De plus, les développeurs suivants ont travaillé 
  par le passé dans l'équipe <font color="#008000">LimeWire</font>, mais se sont 
  consacrés depuis à d'autres projets :</font></p>
