--- a/lib/messagebundles/resources/about_nl.html
+++ b/lib/messagebundles/resources/about_nl.html
@@ -22,6 +22,7 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
@@ -30,7 +31,8 @@
  graphics zijn het harde werk van Senior Ontwikkelaar Aubrey Arago. Aubrey ontwikkelde ook
  de <font color="#008000">LimeWire</font> themes.</font></p>
 <p><font face="sans-serif" size="3">Achter de schermen worden de
- bedrijfsontwikkelingen en de zaken van dag tot dag behandeld door Meghan Formel.</font></p>
+ bedrijfsontwikkelingen en de zaken van dag tot dag behandeld door Meghan Formel en
+ Katie Catillaz.</font></p>
 <p><font face="sans-serif" size="3">Zenzele Bell beantwoord graag alle
  <font color="#008000">LimeWire Pro</font> ondersteunings vragen.</font></p>
 <p><font face="sans-serif" size="3"> Bovendien hebben de volgende ontwikkelaars in het verleden gewerkt
