--- a/lib/messagebundles/resources/about_pl.html
+++ b/lib/messagebundles/resources/about_pl.html
@@ -23,14 +23,16 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3"><a href="http://www.limewire.com/">Stronê domow±</a> 
  projektu <font color="#008000">LimeWire</font> oraz znaczn± czê¶æ elementów graficznych 
- programu opracowa³ Aubreya Arago<span lang="fr">.</span></font></p>
+ programu opracowa³ Aubreya Arago. Aubrey also designed the
+ <font color="#008000">LimeWire</font> themes.</font></p>
 <p><font face="sans-serif" size="3">Behind the scenes business developments and 
- day to day affairs are handled by Meghan Formel.</font></p>
+ day to day affairs are handled by Meghan Formel and Katie Catillaz.</font></p>
 <p><font face="sans-serif" size="3"><span lang="fr">N</span>atomiast pomoc techniczn± dla u¿ytkowników wersji
  <font color="#008000">LimeWire Pro</font> zapewnia Zenzele Bell.</font></p>
 <p><font face="sans-serif" size="3">Warto tak¿e wymieniæ innych wa¿nych cz³onków 
