--- a/lib/messagebundles/resources/about_sl.html
+++ b/lib/messagebundles/resources/about_sl.html
@@ -22,14 +22,16 @@
  <li>Zlatin Balevsky</li>
  <li>Sam Berlin</li>
  <li>Greg Bildson</li>
+ <li>Dave Nicponski</li>
  <li>Justin Schmidt</li>
  </font>
 </ul>
 <p><font face="sans-serif" size="3"><a href="http://www.limewire.com/">Spletna stran</a>
  <font color="#008000">LimeWire</font> in ¹tevilne grafike v programu
- <font color="#008000">LimeWire</font> so delo Aubrey Arago<span lang="fr">.</span></font></p>
+ <font color="#008000">LimeWire</font> so delo Aubrey Arago. Aubrey also designed
+ the <font color="#008000">LimeWire</font> themes.</font></p>
 <p><font face="sans-serif" size="3">Behind the scenes business developments and 
- day to day affairs are handled by Meghan Formel.</font></p>
+ day to day affairs are handled by Meghan Formel and Katie Catillaz.</font></p>
 <p><font face="sans-serif" size="3">Zenzele Bell pa odgovarja 
  na vsa <font color="#008000">LimeWire Pro</font> tehnièna vpra¹anja.</font></p>
 <p><font face="sans-serif" size="3">Naslednji na¹teti so nekoè delali v ekipi
