Add Traditional Chinese reviewer. Some more formatting in the bottom of the HTML table version.

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -989,13 +989,13 @@ fa_IR   ‫?ارسی/ايران‬                           mail: amin.karimi <
 </pre></td></tr>
 
 <tr class="a"><td colspan="7"><pre>
-ps      Pashto/Afghanistan      Messages      New translator needed !
+ps      Pashto/Afghanistan      Messages      (New translator needed)
 ps_AF   Pushto/Afghanistan                    mail: ? <em>AT</em> ? <em>DOT</em> ?
 ps_PK   /Pakistan
 </pre></td></tr>
 
 <tr class="b"><td colspan="7"><pre>
-ur      Urdu/Pakistan/India     Messages      New translator needed !
+ur      Urdu/Pakistan/India     Messages      (New translator needed)
 ur_PK   ‫اردو/پاکستان‬                          mail: ? <em>AT</em> ? <em>DOT</em> ?
 ur_IN                                         
 </pre></td></tr>
@@ -1008,7 +1008,7 @@ ur_IN
 <td valign="top"><code>dv</code></td><td valign="top" rowspan="2" xml:lang="dv">Divehi</td><td valign="top" rowspan="2"><em>Maldives</em></td>
 <td valign="top" rowspan="2">Messages</td>
 <td valign="top" rowspan="2">
-  <em>New translator needed !</em><br />
+  <em>(New translator needed)</em><br />
   &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
 </td></tr>
 <tr class="a"><td valign="top"><code><em>dv_MV<em></code></td></tr>
@@ -1021,7 +1021,7 @@ ur_IN
 <td valign="top"><code>gez</code></td><td valign="top" rowspan="2" xml:lang="gez">Ethiopia</td><td valign="top" rowspan="2"><em>Ethiopia</em></td>
 <td valign="top" rowspan="3">Messages</td>
 <td valign="top" rowspan="3">
-  <em>New translator needed !</em><br />
+  <em>(New translator needed)</em><br />
   &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
 </td></tr>
 <tr class="a"><td valign="top"><code><em>gez_ET<em></code></td></tr>
@@ -1030,22 +1030,22 @@ ur_IN
 <tr><th colspan="7">Languages using Devanagari characters (in ISCII-Deva, or UTF-8)</th></tr>
 
 <tr class="a"><td colspan="7"><pre>
-hi      Hindi/India             Messages      New translator needed !
+hi      Hindi/India             Messages      (New translator needed)
 hi_IN   हिंदी/इंडिया                                   mail: ? <em>AT</em> ? <em>DOT</em> ?
 </pre></td></tr>
 
 <tr><th colspan="7">Languages using Bengali characters (in ISCII-Beng, or UTF-8)</th></tr>
 
 <tr class="a"><td colspan="7"><pre>
-bn      Bengali/Bengla Desh     Messages      New translator needed !
+bn      Bengali/Bengla Desh     Messages      (New translator needed)
 bn_BD   Bengla/Bengladesh                     mail: ? <em>AT</em> ? <em>DOT</em> ?
-bn_IN   /India                                mail: ? <em>AT</em> ? <em>DOT</em> ?
+bn_IN   /India
 </pre></td></tr>
 
 <tr><th colspan="7">Languages using Tamil characters (in ISCII-Taml, or UTF-8)</th></tr>
 
 <tr class="a"><td colspan="7"><pre>
-ta      Tamil/Sri Lanka         Messages      New translator needed !
+ta      Tamil/Sri Lanka         Messages      (New translator needed)
 ta_LK   தமிழ/Sri Lanka                       mail: ? <em>AT</em> ? <em>DOT</em> ?
 ta_IN   /India                                
 </pre></td></tr>
@@ -1060,47 +1060,75 @@ ta_IN   /India
 <tr><th colspan="7">Languages using Thai characters (in ISO-8859-11)</th></tr>
 
 <tr class="a"><td colspan="7"><pre>
-th      Thai/Thailand           Messages      New translator needed !
+th      Thai/Thailand           Messages      (New translator needed)
 th_TH   ภาษาไทย/ประเทศไทย                                      mail: ? <em>AT</em> ? <em>DOT</em> ?
 </pre></td></tr>
 
 <tr><th colspan="7">Languages using Burmese characters (in UTF-8)</th></tr>
 
 <tr class="a"><td colspan="7"><pre>
-bu      Burmese/Myanmar         Messages      New translator needed !
+bu      Burmese/Myanmar         Messages      (New translator needed)
 bu_MM                                         mail: ? <em>AT</em> ? <em>DOT</em> ?
 </pre></td></tr>
 
 <tr><th colspan="7">Languages using Far-East Asian characters (in SJIS, KSC56001, GBK, HKCS)</th></tr>
 
-<tr class="a"><td colspan="7"><pre>
-ja      Japanese/Japan          Messages      "T. Yuji"
-ja_JP   日本語/日本                           mail: yujit <em>AT</em> hotmail <em>DOT</em> com
-                                              "Takahiro Kawaguchi"
-                                              mail: esperoboy <em>AT</em> mac <em>DOT</em> com
-                                              "Takanobu Torigoe"
-                                              mail: heavy_baby <em>AT</em> yahoo <em>DOT</em> co.jp
-                                              "Shinada Atsuchi"
-                                              mail: shinada <em>AT</em> gmx <em>DOT</em> net
-</pre></td></tr>
+<tr class="a">
+<td valign="top" rowspan="2" xml:lang="ja"><b>日本語</b></td>
+<td valign="top" rowspan="2"><em><b>Japanese<b></em></td>
+<td valign="top"><code>ja</code></td><td valign="top" rowspan="2" xml:lang="ja">日本</td><td valign="top" rowspan="2"><em>Japan</em></td>
+<td valign="top" rowspan="2">Messages<br />
+download.html</td>
+<td valign="top" rowspan="2">
+  <b>T. Yuji</b><br />
+  &lt;yujit <em>AT</em> hotmail <em>DOT</em> com&gt;,<br />
+  <b>Takahiro Kawaguchi</b><br />
+  &lt;esperoboy <em>AT</em> mac <em>DOT</em> com&gt;,<br />
+  <b>Takanobu Torigoe</b><br />
+  &lt;heavy_baby <em>AT</em> yahoo <em>DOT</em> co.jp&gt;,<br />
+  <b>Shinada Atsuchi</b><br />
+  &lt;shinada <em>AT</em> gmx <em>DOT</em> net&gt;
+</td></tr>
+<tr class="a"><td valign="top"><code><em>ja_JP<em></code></td></tr>
 
-<tr class="b"><td colspan="7"><pre>
-ko      Korean/Korea            Messages      New translator needed !
-ko_KR   한글 (국제)/대한민국                   mail: ? <em>AT</em> ? <em>DOT</em> ?
-ko_KP   /Dem.Rep.Korea                        
-</pre></td></tr>
+<tr class="b">
+<td valign="top" rowspan="3" xml:lang="ko"><b>한글</b></td>
+<td valign="top" rowspan="3"><em>Korean</em></td>
+<td valign="top"><code>ko</code></td><td valign="top" rowspan="2" xml:lang="ko">한글</td><td valign="top" rowspan="2"><em>Korea (South)</em></td>
+<td valign="top" rowspan="3">Messages</td>
+<td valign="top" rowspan="3">
+  <em>(New translator needed)</em><br />
+  &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
+</td></tr>
+<tr class="b"><td valign="top"><code><em>ko_KR<em></code></td></tr>
+<tr class="b"><td valign="top"><code><em>ko_KP<em></code></td><td valign="top" xml:lang="ko">대한민국</td><td valign="top"><em>Korea (North), Dem. Rep.</em></td></tr>
 
-<tr class="a"><td colspan="7"><pre>
-zh      Chinese(Simplified)     Messages      "Shawn (Xiao Kehua)"
-zh_CN   汉语 (国际)/中国        download.html mail: xiao_khua <em>AT</em> cvicse <em>DOT</em> com
-zh_SG   /Singapore                            
-</pre></td></tr>
+<tr class="a">
+<td valign="top" rowspan="3" xml:lang="zh"><b>汉语</b> (国际)</td>
+<td valign="top" rowspan="3"><em><b>Chinese (Simplified)<b></em></td>
+<td valign="top"><code>zh</code></td><td valign="top" rowspan="2" xml:lang="zh">中国</td><td valign="top" rowspan="2"><em>China, People's Rep. of</em></td>
+<td valign="top" rowspan="3">Messages<br />
+download.html</td>
+<td valign="top" rowspan="3">
+  <b>Shawn</b> (Xiao Kehua)<br />
+  &lt;xiao_khua <em>AT</em> cvicse <em>DOT</em> com&gt;
+</td></tr>
+<tr class="a"><td valign="top"><code><em>zh_CN<em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>zh_SG<em></code></td><td valign="top" xml:lang="zh">Singapore</td><td valign="top"><em>Singapore</em></td></tr>
 
-<tr class="b"><td colspan="7"><pre>
-zh_TW   Chinese (Traditional)   Messages      "Zou Ciyouan"
-zh_HK   漢語 (國際)/中國??/香港             mail: zouciyouan <em>AT</em> yeah <em>DOT</em> net
-zh_MO   /澳門                                 
-</pre></td></tr>
+<tr class="b">
+<td valign="top" rowspan="3" xml:lang="zh">繁體<b>中文</b></td>
+<td valign="top" rowspan="3"><em><b>Chinese (Traditional)</b></em></td>
+<td valign="top"><code>zh_TW</code></td><td valign="top" xml:lang="zh">台灣</td><td valign="top"><em>Taiwan, R.O.C.</em></td>
+<td valign="top" rowspan="3">Messages</td>
+<td valign="top" rowspan="3">
+  <b>Zou Ciyouan</b><br />
+  &lt;zouciyouan <em>AT</em> yeah <em>DOT</em> net&gt;<br />
+  <b>Ted-The-Taiwanese</b><br />
+  &lt;doggattack <em>AT</em> yahoo <em>DOT</em> com.tw&gt;
+</td></tr>
+<tr class="b"><td valign="top"><code><em>zh_HK<em></code></td><td valign="top" xml:lang="zh">香港</td><td valign="top"><em>Hong Kong, S.A.R.</em></td></tr>
+<tr class="b"><td valign="top"><code><em>zh_MO<em></code></td><td valign="top" xml:lang="zh">澳門</td><td valign="top"><em>Macau, S.A.R.</em></td></tr>
 
 </tbody></table>
 
