Add some missing data for Traditional Chinese

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -1104,8 +1104,8 @@ download.html</td>
 <tr class="b"><td valign="top"><code><em>ko_KP<em></code></td><td valign="top" xml:lang="ko">대한민국</td><td valign="top"><em>Korea (North), Dem. Rep.</em></td></tr>
 
 <tr class="a">
-<td valign="top" rowspan="3" xml:lang="zh"><b>汉语</b> (国际)</td>
-<td valign="top" rowspan="3"><em><b>Chinese (Simplified)<b></em></td>
+<td valign="top" rowspan="3" xml:lang="zh"><b>汉语</b><br />(国际)</td>
+<td valign="top" rowspan="3"><em><b>Chinese<br />(Simplified)<b></em></td>
 <td valign="top"><code>zh</code></td><td valign="top" rowspan="2" xml:lang="zh">中国</td><td valign="top" rowspan="2"><em>China, People's Rep. of</em></td>
 <td valign="top" rowspan="3">Messages<br />
 download.html</td>
@@ -1117,8 +1117,8 @@ download.html</td>
 <tr class="a"><td valign="top"><code><em>zh_SG<em></code></td><td valign="top" xml:lang="zh">Singapore</td><td valign="top"><em>Singapore</em></td></tr>
 
 <tr class="b">
-<td valign="top" rowspan="3" xml:lang="zh">繁體<b>中文</b></td>
-<td valign="top" rowspan="3"><em><b>Chinese (Traditional)</b></em></td>
+<td valign="top" rowspan="3" xml:lang="zh">繁體<b>中文</b><br />(國際)</td>
+<td valign="top" rowspan="3"><em><b>Chinese<br />(Traditional)</b></em></td>
 <td valign="top"><code>zh_TW</code></td><td valign="top" xml:lang="zh">台灣</td><td valign="top"><em>Taiwan, R.O.C.</em></td>
 <td valign="top" rowspan="3">Messages</td>
 <td valign="top" rowspan="3">
