New Estonian translation by Margus Martsepp (ocjel AT hot DOT ee). 96.60% complete! Thanks.

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -589,13 +589,13 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <tr><th colspan="7">Languages using Latin (Baltic Rim) characters (in ISO-8859-4)</th></tr>
 
 <tr class="a">
-<td valign="top" rowspan="3" xml:lang="et">Eesti</td>
-<td valign="top" rowspan="3"><em>Estonian</em></td>
+<td valign="top" rowspan="3" xml:lang="et"><b>Eesti</b></td>
+<td valign="top" rowspan="3"><em><b>Estonian</b></em></td>
 <td valign="top"><code>et</code></td><td valign="top" rowspan="2" xml:lang="et">Eesti</td><td valign="top" rowspan="2"><em>Estonia</em></td>
 <td valign="top" rowspan="3">Messages</td>
 <td valign="top" rowspan="3">
-  <em>(New translator needed)</em><br />
-  &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
+  <em>Margus Martsepp</em><br />
+  &lt;ocjel <em>AT</em> hot <em>DOT</em> ee&gt;
 </td></tr>
 <tr class="a"><td valign="top"><code><em>et_EE</em></code></td></tr>
 <tr class="a"><td valign="top"><code><em>et_EU</em></code></td><td valign="top" xml:lang="et">Europei Union</td><td valign="top"><em>European Union</em></td></tr>
