Final cleanup of Serbian(Latin/Cyrillic)/Bosnian/Croatian

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -666,47 +666,46 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <tr class="a"><td valign="top"><code><em>cs_EU</em></code></td><td valign="top" xml:lang="cs">Evropská Unie</td><td valign="top"><em>European Union</em></td></tr>
 
 <tr class="b">
-<td valign="top" rowspan="5" xml:lang="hr"><b>Hrvatsky</b></td>
-<td valign="top" rowspan="5"><em><b>Croatian</b></em></td>
-<td valign="top"><code>hr</code></td><td valign="top" rowspan="5" xml:lang="hr">Hrvatska</td><td valign="top" rowspan="5"><em>Croatia</em></td>
-<td valign="top" rowspan="5">Messages</td>
-<td valign="top" rowspan="5">
+<td valign="top" rowspan="3" xml:lang="hr"><b>Hrvatsky</b></td>
+<td valign="top" rowspan="3"><em><b>Croatian</b></em></td>
+<td valign="top"><code>hr</code></td><td valign="top" rowspan="3" xml:lang="hr">Hrvatska</td><td valign="top" rowspan="3"><em>Croatia</em></td>
+<td valign="top" rowspan="3">Messages</td>
+<td valign="top" rowspan="3">
   <b>Dan Bernardic</b><br />
   &lt;dan.bernardic <em>AT</em> gmail <em>DOT</em> com&gt;
 </td></tr>
 <tr class="b"><td valign="top"><code><em>hr_HR</em></code></td></tr>
 <tr class="b"><td valign="top"><code><em>sh_HR</em></code></td></tr>
-<tr class="b"><td valign="top"><code><em>shLatn</em></code></td></tr>
-<tr class="b"><td valign="top"><code><em>shLatn_HR</em></code></td></tr>
 
 <tr class="a">
-<td valign="top" rowspan="5" xml:lang="bs"><b>Bosanski</b></td>
-<td valign="top" rowspan="5"><em><b>Bosnian</b></em></td>
-<td valign="top"><code>bs</code></td><td valign="top" rowspan="5" xml:lang="bs">Bosna i Hercegovina</td><td valign="top" rowspan="5"><em>Bosnia &amp; Herzegovina</em></td>
-<td valign="top" rowspan="5">Messages,<br />download.html</td>
-<td valign="top" rowspan="5">
+<td valign="top" rowspan="2" xml:lang="bs"><b>Bosanski</b></td>
+<td valign="top" rowspan="2"><em><b>Bosnian</b></em></td>
+<td valign="top"><code>bs</code></td><td valign="top" rowspan="2" xml:lang="bs">Bosna i Hercegovina</td><td valign="top" rowspan="2"><em>Bosnia &amp; Herzegovina</em></td>
+<td valign="top" rowspan="2">Messages,<br />download.html</td>
+<td valign="top" rowspan="2">
+  <em>(New translator needed)</em><br />
+  &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
+</td></tr>
+<tr class="a"><td valign="top"><code><em>bs_BA</em></code></td></tr>
+
+<tr class="b">
+<td valign="top" rowspan="8" xml:lang="sh"><b>Srpsky</b></td>
+<td valign="top" rowspan="8"><em><b>Serbian</b><br />(Latin)</em></td>
+<td valign="top"><code>sh</code></td><td valign="top" rowspan="6" xml:lang="sh">Srbija i Crna Gora</td><td valign="top" rowspan="6"><em>Serbia &amp; Montenegro</em></td>
+<td valign="top" rowspan="8">Messages</td>
+<td valign="top" rowspan="8">
   <b>"ORBUS"</b> (Enver Julardžija)<br />
   &lt;orbus <em>AT</em> skynet <em>DOT</em> be&gt;<br />
   <b>Ing. Salih Čavkić</b><br />
   &lt;cavkic <em>AT</em> skynet <em>DOT</em> be&gt;<br />
 </td></tr>
-<tr class="a"><td valign="top"><code><em>bs_BH</em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>hr_BH</em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>sh_BH</em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>shLatn_BH</em></code></td></tr>
-
-<tr class="b">
-<td valign="top" rowspan="4" xml:lang="hr"><b>Srpsky</b></td>
-<td valign="top" rowspan="4"><em><b>Serbian</b><br />(Latin)</em></td>
-<td valign="top"><code>hr_SR</code></td><td valign="top" rowspan="4" xml:lang="hr">Srbija-Tsrna Gora</td><td valign="top" rowspan="4"><em>Serbia-Montenegro</em></td>
-<td valign="top" rowspan="4">Messages</td>
-<td valign="top" rowspan="4">
-  <em>(Is a reviewer needed?)</em><br />
-  &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
-</td></tr>
+<tr class="b"><td valign="top"><code><em>sh_CS<em></code></td></tr>
+<tr class="b"><td valign="top"><code><em>sh_YU<em></code></td></tr>
 <tr class="b"><td valign="top"><code><em>srLatn</em></code></td></tr>
-<tr class="b"><td valign="top"><code><em>srLatn_SR</em></code></td></tr>
-<tr class="b"><td valign="top"><code><em>shLatn_SR</em></code></td></tr>
+<tr class="b"><td valign="top"><code><em>srLatn_CS</em></code></td></tr>
+<tr class="b"><td valign="top"><code><em>srLatn_YU</em></code></td></tr>
+<tr class="b"><td valign="top"><code><em>sh_BA</em></code></td><td valign="top" rowspan="2" xml:lang="sh">Bosna i Hercegovina</td><td valign="top" rowspan="2"><em>Bosnia &amp; Herzegovina</em></tr>
+<tr class="b"><td valign="top"><code><em>srLatn_BA</em></code></td></tr>
 
 <tr class="a">
 <td valign="top" rowspan="3" xml:lang="hu"><b>Magyar</b></td>
@@ -935,28 +934,21 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <tr class="b"><td valign="top"><code><em>ru_UZ<em></code></td><td valign="top" xml:lang="ru">Узбекистан</td><td valign="top"><em>Uzbekistan</em></td></tr>
 
 <tr class="a">
-<td valign="top" rowspan="15" xml:lang="sr"><b>Српски</b></td>
-<td valign="top" rowspan="15"><em><b>Serbian</b><br />(Cyrillic)</em></td>
-<td valign="top"><code>sr</code></td><td valign="top" rowspan="8" xml:lang="sr">Србија-Црна Гора</td><td valign="top" rowspan="8"><em>Serbia-Montenegro</em></td>
-<td valign="top" rowspan="15">Messages</td>
-<td valign="top" rowspan="15">
+<td valign="top" rowspan="8" xml:lang="sr"><b>Српски</b></td>
+<td valign="top" rowspan="8"><em><b>Serbian</b><br />(Cyrillic)</em></td>
+<td valign="top"><code>sr</code></td><td valign="top" rowspan="6" xml:lang="sr">Србија и Црна Гора</td><td valign="top" rowspan="6"><em>Serbia &amp; Montenegro</em></td>
+<td valign="top" rowspan="8">Messages</td>
+<td valign="top" rowspan="8">
   <b>Borislav Tadic</b><br />
   &lt;borislav <em>AT</em> trust-b <em>DOT</em> com&gt;
 </td></tr>
-<tr class="a"><td valign="top"><code><em>sr_SR<em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>sr_CS<em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>sr_YU<em></code></td></tr>
 <tr class="a"><td valign="top"><code><em>srCyrl<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>srCyrl_SR<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>sh<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>sh_SR<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>shCyrl<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>shCyrl_SR<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>sr_BH<em></code></td><td valign="top" rowspan="3" xml:lang="sr">Боснја-Ъэрзэговина</td><td valign="top" rowspan="3"><em>Bosnia-Herzegovina</em></td></tr>
-<tr class="a"><td valign="top"><code><em>srCyrl_BH<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>shCyrl_BH<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>sr_MK<em></code></td><td valign="top" rowspan="4" xml:lang="sr">Македонија</td><td valign="top" rowspan="4"><em>Macedonia, F.Y.R. of</em></td></tr>
-<tr class="a"><td valign="top"><code><em>srCyrl_MK<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>sh_MK<em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>shCyrl_MK<em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>srCyrl_CS<em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>srCyrl_YU<em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>sr_BA<em></code></td><td valign="top" rowspan="2" xml:lang="sr">Босна и Херцеговина</td><td valign="top" rowspan="2"><em>Bosnia &amp; Herzegovina</em></td></tr>
+<tr class="a"><td valign="top"><code><em>srCyrl_BA<em></code></td></tr>
 
 <tr class="b">
 <td valign="top" rowspan="2" xml:lang="tg">Тоҷики</td>
