Add Uighur, and another supported font for Hebrew

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -1003,7 +1003,7 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <tr class="a"><td valign="top"><code><em>hy_AM<em></code></td></tr>
 
 <!-- ================================================ -->
-<tr><th colspan="7">Languages written with <b>Hebrew</b> characters (in ISO-8859-8, logical order)<br /><small><i>Supporting fonts: David, FrankRuehl, Myriam</i></small></th></tr>
+<tr><th colspan="7">Languages written with <b>Hebrew</b> characters (in ISO-8859-8, logical order)<br /><small><i>Supporting fonts: David, FrankRuehl, Myriam, Courier New</i></small></th></tr>
 <!-- ================================================ -->
 
 <tr class="a">
@@ -1078,6 +1078,17 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <tr class="a"><td valign="top"><code><em>ps_PK<em></code></td><td valign="top" xml:lang="ps" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">باكستان</font></td><td valign="top"><em>Pakistan</em></td></tr>
 
 <tr class="b">
+<td valign="top" rowspan="2" xml:lang="ug" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">اویغوری</font></td>
+<td valign="top" rowspan="2"><em>Uighur</em></td>
+<td valign="top"><code>ug</code></td><td valign="top" rowspan="2" xml:lang="ug" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">چین</font></td><td valign="top" rowspan="2"><em>China</em></td>
+<td valign="top" rowspan="2">Messages</td>
+<td valign="top" rowspan="2">
+  <em>(New translator needed)</em><br />
+  &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
+</td></tr>
+<tr class="b"><td valign="top"><code><em>ug_CN<em></code></td></tr>
+
+<tr class="a">
 <td valign="top" rowspan="3" xml:lang="ur" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">اردو</font></td>
 <td valign="top" rowspan="3"><em>Urdu</em></td>
 <td valign="top"><code>ur</code></td><td valign="top" rowspan="2" xml:lang="ur" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">پاکستان</font></td><td valign="top" rowspan="2"><em>Afghanistan</em></td>
@@ -1086,8 +1097,8 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
   <em>(New translator needed)</em><br />
   &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
 </td></tr>
-<tr class="b"><td valign="top"><code><em>ur_PK<em></code></td></tr>
-<tr class="b"><td valign="top"><code><em>ur_IN<em></code></td><td valign="top" xml:lang="ur" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">الهند</font></td><td valign="top"><em>Pakistan</em></td></tr>
+<tr class="a"><td valign="top"><code><em>ur_PK<em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>ur_IN<em></code></td><td valign="top" xml:lang="ur" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">الهند</font></td><td valign="top"><em>Pakistan</em></td></tr>
 
 <!-- ================================================ -->
 <tr><th colspan="7">Languages written with <b>Thaana</b> characters (in UTF-8)<br /><small><i>Supporting fonts: <a href="http://www.mcst.gov.mv/News_and_Events/xpfonts.htm">Mv Galan Normal</a>, MV Boli, <a href="http://home.att.net/~jameskass/">Code2000</a></i></small></th></tr>
