Reflecting new prefered code for Indonesian in Java ("in" instead of "id")

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -199,18 +199,21 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <tr class="b"><td valign="top"><code><em>gd_UK</em></code></td></tr>
 
 <tr class="a">
-<td valign="top" rowspan="5" xml:lang="id"><b>Bahasa Indonesia<b></td>
-<td valign="top" rowspan="5"><em><b>Indonesian</b></em></td>
-<td valign="top"><code>id</code></td><td valign="top" rowspan="4" xml:lang="id">Indonesia</td><td valign="top" rowspan="4">Indonesia</td>
-<td valign="top" rowspan="5">Messages</td>
-<td valign="top" rowspan="5">
+<td valign="top" rowspan="8" xml:lang="id"><b>Bahasa Indonesia<b></td>
+<td valign="top" rowspan="8"><em><b>Indonesian</b></em></td>
+<td valign="top"><code>in</code></td><td valign="top" rowspan="4" xml:lang="id">Indonesia</td><td valign="top" rowspan="4">Indonesia</td>
+<td valign="top" rowspan="8">Messages</td>
+<td valign="top" rowspan="8">
   <b>Nokki Zulkarnaen</b><br />
   &lt;n.zulkarnaen <em>AT</em> gmail <em>DOT</em> com&gt;
 </td></tr>
-<tr class="a"><td valign="top"><code><em>id_ID</em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>in</em></code></td></tr>
 <tr class="a"><td valign="top"><code><em>in_ID</em></code></td></tr>
-<tr class="a"><td valign="top"><code><em>id_TL</em></code></td><td valign="top" xml:lang="gl">Timor Leste</td><td valign="top"><em>Timor Leste</em></td></tr>
+<tr class="a"><td valign="top"><code><em>id</em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>id_ID</em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>in_TL</em></code></td><td valign="top" rowspan="4" xml:lang="id">Timor-Leste</td><td valign="top" rowspan="4"><em>East Timor</em></td></tr>
+<tr class="a"><td valign="top"><code><em>in_TP</em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>id_TL</em></code></td></tr>
+<tr class="a"><td valign="top"><code><em>id_TP</em></code></td></tr>
 
 <tr class="b">
 <td valign="top" rowspan="2" xml:lang="mg">Malagasy</td>
@@ -563,18 +566,19 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <tr class="b"><td valign="top"><code><em>oc_EU</em></code></td><td valign="top" xml:lang="oc">Union Eropèèna</td><td valign="top"><em>European Union</em></td></tr>
 
 <tr class="a">
-<td valign="top" rowspan="6" xml:lang="pt"><b>Português</b><br />(standart)</td>
-<td valign="top" rowspan="6"><em><b>Portuguese</b><br />(standard)</em></td>
+<td valign="top" rowspan="7" xml:lang="pt"><b>Português</b><br />(standart)</td>
+<td valign="top" rowspan="7"><em><b>Portuguese</b><br />(standard)</em></td>
 <td valign="top"><code>pt</code></td><td valign="top" rowspan="2" xml:lang="pt">Portugal</td><td valign="top" rowspan="2"><em>Portugal</em></td>
-<td valign="top" rowspan="6">Messages</td>
-<td valign="top" rowspan="6">
+<td valign="top" rowspan="7">Messages</td>
+<td valign="top" rowspan="7">
   <em>(Is a reviewer needed?)</em><br />
   &lt;? <em>AT</em> ? <em>DOT</em> ?&gt;
 </td></tr>
 <tr class="a"><td valign="top"><code><em>pt_PT</em></code></td></tr>
 <tr class="a"><td valign="top"><code><em>pt_EU</em></code></td><td valign="top" xml:lang="pt">União Europeia</td><td valign="top"><em>European Union</em></td></tr>
 <tr class="a"><td valign="top"><code><em>pt_CV</em></code></td><td valign="top" xml:lang="pt">Cape Verde</td><td valign="top"><em>Cape Verde</em></td></tr>
-<tr class="a"><td valign="top"><code><em>pt_TL</em></code></td><td valign="top" xml:lang="pt">Timor Leste</td><td valign="top"><em>Timor Leste</em></td></tr>
+<tr class="a"><td valign="top"><code><em>pt_TL</em></code></td><td valign="top" rowspan="2" xml:lang="pt">Timor-Leste</td><td valign="top" rowspan="2"><em>East Timor</em></td></tr>
+<tr class="a"><td valign="top"><code><em>pt_TP</em></code></td></tr>
 <tr class="a"><td valign="top"><code><em>pt_MO</em></code></td><td valign="top" xml:lang="pt">Macaõ, R.A.S. (CN)</td><td valign="top"><em>Macau, S.A.R. (CN)</em></td></tr>
 
 <tr class="b">
